; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/tlg2300/extr_pd-dvb.c_fw_delay_overflow.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/tlg2300/extr_pd-dvb.c_fw_delay_overflow.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pd_dvb_adapter = type { i64 }

@jiffies = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pd_dvb_adapter*)* @fw_delay_overflow to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fw_delay_overflow(%struct.pd_dvb_adapter* %0) #0 {
  %2 = alloca %struct.pd_dvb_adapter*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store %struct.pd_dvb_adapter* %0, %struct.pd_dvb_adapter** %2, align 8
  %5 = load i64, i64* @jiffies, align 8
  %6 = load %struct.pd_dvb_adapter*, %struct.pd_dvb_adapter** %2, align 8
  %7 = getelementptr inbounds %struct.pd_dvb_adapter, %struct.pd_dvb_adapter* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = sub nsw i64 %5, %8
  store i64 %9, i64* %3, align 8
  %10 = load i64, i64* %3, align 8
  %11 = call i32 @abs(i64 %10)
  %12 = call i32 @jiffies_to_msecs(i32 %11)
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* %4, align 4
  %14 = icmp ugt i32 %13, 800
  %15 = zext i1 %14 to i64
  %16 = select i1 %14, i32 1, i32 0
  ret i32 %16
}

declare dso_local i32 @jiffies_to_msecs(i32) #1

declare dso_local i32 @abs(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
